--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,16 +44,8 @@ select = [
     "RUF" , #Ruff-specific rules
 ]
 ignore = [
-    "D401",
-    "ANN401",
-    "S603",
-    "S607",
-    "ARG002", #unused-method-argument
-    "PTH122", #os-path-splitext
-    "TRY301", #raise-within-try
-    "PERF203", #try-except-in-loop
-    "UP004", #useless-object-inheritance
-    "PLR0911" #too many returns
+    "D401", #First line of docstring should be in imperative mood
+    "ANN401", #Any dissallowed
 ]
 fix = true
 show-fixes = true
