--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-loguru==0.7.0
-pre-commit==3.3.3
-prettytable==3.8.0
-psycopg2-binary==2.9.6
+loguru==0.7.2
+packaging==23.1
+pre-commit==3.4.0
+prettytable==3.9.0
+psycopg2-binary==2.9.7
