--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 exclude: "^docs/|/migrations/|.venv"
-default_stages: [ commit ]
+default_stages: [ pre-commit ]
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -44,20 +44,13 @@ repos:
         args:
           - "--settings-path=pyproject.toml"
 
-  - repo: https://github.com/hadialqattan/pycln
-    rev: v2.2.2
-    hooks:
-      - id: pycln
-        args:
-          - "--config=pyproject.toml"
-
-  - repo: https://github.com/PyCQA/docformatter
-    rev: v1.7.5
-    hooks:
-      - id: docformatter
-        args:
-          - "--config=pyproject.toml"
-          - "--in-place"
+#  - repo: https://github.com/PyCQA/docformatter
+#    rev: v1.7.5
+#    hooks:
+#      - id: docformatter
+#        args:
+#          - "--config=pyproject.toml"
+#          - "--in-place"
 
 
   - repo: https://github.com/pre-commit/mirrors-mypy
